# orgbrain

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
_bmad/: config.toml  config.user.toml
_bmad-output/brainstorming/: brainstorming-session-2026-05-22-001.md
_bmad-output/implementation-artifacts/: 1-1-monorepo-scaffold-local-dev-environment.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-05-28.md  ux-design-directions.html  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
ai-worker/: Dockerfile  pyproject.toml
ai-worker/app/: embed.py  extract.py  main.py  models.py
ai-worker/tests/: test_embed.py  test_extract.py  test_integration.py
api/: Dockerfile  go.mod  oapi-codegen-ai-worker.yaml  oapi-codegen-rag.yaml
api/cmd/api/: main.go
docs/: domain-research.md  rules.md
migrations/tenant/: 004_query_sessions.sql
openapi/: ai-worker.yaml
rag/: Dockerfile  openapi.yaml  pyproject.toml
rag/app/: confidence.py  db.py  fallback.py  main.py  models.py  pipeline.py  retrieval.py  staleness.py
rag/tests/: test_confidence.py  test_fallback.py  test_pipeline.py  test_retrieval.py
scripts/: isolation-test.sh  load-test.sh  migrate-all-tenants.sh
signal-job/: Dockerfile  pyproject.toml
signal-job/app/: compute.py  db.py  main.py  models.py
signal-job/tests/: test_cold_start.py  test_compute.py
(+64 files in other folders)
