[project]
name = "rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "anthropic>=0.34.0",
    "openai>=1.50.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "structlog>=24.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
